--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "clsx": "^2.1.1",
     "lucide-react": "^0.441.0",
     "next": "14.2.9",
+    "next-video": "^1.2.0",
     "react": "^18",
     "react-dom": "^18",
     "react-drag-drop-files": "^2.3.10",
